fix toogl activity feed button style on IE 11 & Chrome

--- a/src/components/form/ActivityFeed.css
+++ b/src/components/form/ActivityFeed.css
@@ -12,6 +12,7 @@
   flex: 1 100%;
   padding: 0.5em 0;
 }
+
 .event-item + .event-item > .event-content {
   border-top: 1px solid var(--light-grey);
 }
@@ -33,9 +34,14 @@
   padding: 1em;
 }
 
-button.button.toogle-detail {
-  background-color: inherit;
-  box-shadow: inherit;
-  color: inherit;
-  padding: inherit;
+button.toogle-detail {
+  font-size: var(--space-s);
+  font-family: 'Source Sans Pro', Arial, sans-serif;
+  border: 0;
+  display: inline-block;
+  background-color: #00000000;
+}
+
+button.toogle-detail:focus {
+  outline: 0;
 }
